Remove wildcards from core and components

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1313,6 +1313,7 @@ $tooltip-border-radius:         $border-radius !default;
 
 $tooltip-close-padding-y:       .125rem !default;
 $tooltip-close-padding-x:       .3125rem !default;
+$tooltip-close-font-size:       1.25rem !default;
 $tooltip-close-color:           $tooltip-color !default;
 $tooltip-close-opacity:         $close-opacity !default;
 $tooltip-close-hover-color:     $tooltip-color !default;
