--- a/scss/core/_print.scss
+++ b/scss/core/_print.scss
@@ -8,10 +8,10 @@
 // http://www.phpied.com/delay-loading-your-print-css/
 // ==========================================================================
 
-@use "../settings" as *;
-@use "../settings-options" as *;
+@use "../settings";
+@use "../settings-options";
 
-@if $enable-print-styles {
+@if settings.$enable-print-styles {
   @media print {
     *,
     *::before,
@@ -45,7 +45,7 @@
     }
     pre,
     blockquote {
-      border: $border-width solid #999;   // Figuration change - use `$border-width` setting instead of 1px default
+      border: settings.$border-width solid #999;   // Figuration change - use `$border-width` setting instead of 1px default
       page-break-inside: avoid;
     }
 
@@ -75,14 +75,14 @@
     // Figuration components start
 
     .badge {
-      border: $border-width solid #000;
+      border: settings.$border-width solid #000;
     }
 
-    @if $enable-table {
+    @if settings-options.$enable-table {
       .table {
         color: inherit !important;
         border-collapse: collapse !important;
-        border-color: $table-border-color !important;
+        border-color: settings.$table-border-color !important;
 
         thead,
         tbody,
