--- a/scss/component/_close.scss
+++ b/scss/component/_close.scss
@@ -1,15 +1,15 @@
-@use "../settings" as *;
-@use "../settings-options" as *;
-@use "../vendor/rfs" as *;
+@use "../settings";
+@use "../settings-options";
+@use "../vendor/rfs";
 
-@if $enable-utility-close {
+@if settings-options.$enable-utility-close {
   .close {
-    @include font-size($close-font-size);
-    font-weight: $close-font-weight;
+    @include rfs.font-size(settings.$close-font-size);
+    font-weight: settings.$close-font-weight;
     line-height: 1;
     color: inherit;
     text-decoration: none;
-    opacity: $close-opacity;
+    opacity: settings.$close-opacity;
 
     // Override anchor styling
     &:hover,
@@ -21,7 +21,7 @@
     &:not(:disabled):not(.disabled) {
       &:hover,
       &:focus {
-        opacity: $close-hover-opacity;
+        opacity: settings.$close-hover-opacity;
       }
     }
   }
