--- a/scss/component/_loader.scss
+++ b/scss/component/_loader.scss
@@ -1,7 +1,7 @@
-@use "../settings" as *;
-@use "../settings-options" as *;
+@use "../settings";
+@use "../settings-options";
 
-@if $enable-loader {
+@if settings-options.$enable-loader {
   @keyframes loader-spin-cw {
     to {
       transform: rotate(360deg);
@@ -11,9 +11,9 @@
   %loader-circle-base {
     position: relative;
     display: inline-block;
-    width: $loader-circle-size;
-    height: $loader-circle-size;
-    vertical-align: $loader-circle-vertical-align;
+    width: settings.$loader-circle-size;
+    height: settings.$loader-circle-size;
+    vertical-align: settings.$loader-circle-vertical-align;
 
     &::before,
     &::after {
@@ -24,28 +24,28 @@
       width: inherit;
       height: inherit;
       content: "";
-      border: $loader-circle-border-width solid transparent;
+      border: settings.$loader-circle-border-width solid transparent;
       // stylelint-disable-next-line property-disallowed-list
       border-radius: 50%;
     }
     &::after {
       border-left-color: currentcolor;
-      animation: $loader-circle-animation-speed linear infinite loader-spin-cw;
+      animation: settings.$loader-circle-animation-speed linear infinite loader-spin-cw;
     }
 
     &::before {
       border-color: currentcolor;
-      opacity: $loader-circle-alt-opacity;
+      opacity: settings.$loader-circle-alt-opacity;
     }
   }
 
-  @if $enable-loader-circle {
+  @if settings-options.$enable-loader-circle {
     .loader-circle {
       @extend %loader-circle-base;
     }
   }
 
-  @if $enable-loader-double {
+  @if settings-options.$enable-loader-double {
     .loader-double {
       @extend %loader-circle-base;
 
@@ -55,12 +55,12 @@
     }
   }
 
-  @if $enable-transitions-reduced {
+  @if settings.$enable-transitions-reduced {
     @media (prefers-reduced-motion: reduce) {
       .loader-circle,
       .loader-double {
         &::after {
-          animation-duration: $loader-circle-animation-speed * 2;
+          animation-duration: settings.$loader-circle-animation-speed * 2;
         }
       }
     }
