--- a/scss/component/_media.scss
+++ b/scss/component/_media.scss
@@ -1,15 +1,15 @@
-@use "../settings" as *;
-@use "../settings-options" as *;
+@use "../settings";
+@use "../settings-options";
 
-@if $enable-media {
+@if settings-options.$enable-media {
   .media {
     display: flex;
     align-items: flex-start;
-    margin-bottom: $media-margin-y;
+    margin-bottom: settings.$media-margin-y;
 
     // Nested media
     .media {
-      margin-top: $media-margin-y;
+      margin-top: settings.$media-margin-y;
 
       &:last-child {
         margin-bottom: 0;
