--- a/scss/component/_navbar.scss
+++ b/scss/component/_navbar.scss
@@ -1,22 +1,25 @@
-@use "../settings" as *;
-@use "../settings-options" as *;
-@use "../mixins" as *;
-@use "../vendor/rfs" as *;
+@use "../settings";
+@use "../settings-options";
+@use "../mixins/border";
+@use "../mixins/box-shadow";
+@use "../mixins/breakpoints";
+@use "../mixins/transition";
+@use "../vendor/rfs";
 
 // Navbar
 // Provide a static navbar from which we expand to create full-width, fixed, and
 // other navbar variations.
-@if $enable-navbar {
+@if settings-options.$enable-navbar {
   .navbar {
     position: relative;
     display: flex;
     flex-wrap: wrap; // allow us to do the line break for collapsing content
     align-items: center;
-    padding: $navbar-padding-y $navbar-padding-x;
+    padding: settings.$navbar-padding-y settings.$navbar-padding-x;
 
     // Because flex properties aren't inherited, we need to redeclare these first
     // few properities so that content nested within behave properly.
-    @if $enable-grid-classes {
+    @if settings.$enable-grid-classes {
       > .container,
       > .container-fluid {
         display: flex;
@@ -25,7 +28,7 @@
       }
     }
 
-    @if $enable-navbar-nav and $enable-dropdown {
+    @if settings-options.$enable-navbar-nav and settings-options.$enable-dropdown {
       &:not([class*="navbar-expand"]) {
         .navbar-nav {
           .dropdown-menu {
@@ -39,20 +42,20 @@
 
   // Navbar Brand
   // Used for brand, project, or site name.
-  @if $enable-navbar-brand {
+  @if settings-options.$enable-navbar-brand {
     .navbar-brand {
       display: inline-block;
-      padding-top: $navbar-brand-padding-y;
-      padding-bottom: $navbar-brand-padding-y;
-      margin-right: $navbar-brand-margin-x;
-      @include font-size($navbar-brand-font-size);
-      font-weight: $navbar-brand-font-weight;
-      text-decoration: if($link-decoration == none, null, none);
+      padding-top: settings.$navbar-brand-padding-y;
+      padding-bottom: settings.$navbar-brand-padding-y;
+      margin-right: settings.$navbar-brand-margin-x;
+      @include rfs.font-size(settings.$navbar-brand-font-size);
+      font-weight: settings.$navbar-brand-font-weight;
+      text-decoration: if(settings.$link-decoration == none, null, none);
       white-space: nowrap;
 
       &:hover,
       &:focus {
-        text-decoration: if($link-hover-decoration == underline, none, null);
+        text-decoration: if(settings.$link-hover-decoration == underline, none, null);
       }
 
       > img {
@@ -63,7 +66,7 @@
 
   // Navbar Nav
   // Navbar navigation based the base `.nav` styles.
-  @if $enable-navbar-nav {
+  @if settings-options.$enable-navbar-nav {
     .navbar-nav {
       display: flex;
       flex-direction: column; // cannot use `inherit` to get the `.navbar`s value
@@ -74,31 +77,31 @@
       .nav-link {
         padding-right: 0;
         padding-left: 0;
-        text-decoration: if($link-decoration == none, null, none);
+        text-decoration: if(settings.$link-decoration == none, null, none);
 
         &:hover,
         &:focus {
-          text-decoration: if($link-hover-decoration == underline, none, null);
+          text-decoration: if(settings.$link-hover-decoration == underline, none, null);
         }
       }
     }
   }
 
   //Navbar Text
-  @if $enable-navbar-text {
+  @if settings-options.$enable-navbar-text {
     .navbar-text {
-      padding-top: $navbar-item-padding-y;
-      padding-bottom: $navbar-item-padding-y;
+      padding-top: settings.$navbar-item-padding-y;
+      padding-bottom: settings.$navbar-item-padding-y;
     }
   }
 
   // Navbar Divider
-  @if $enable-navbar-divider {
+  @if settings-options.$enable-navbar-divider {
     .navbar-divider {
       align-self: stretch;
-      margin: $navbar-divider-margin-x $navbar-divider-margin-y;
+      margin: settings.$navbar-divider-margin-x settings.$navbar-divider-margin-y;
       overflow: hidden;
-      border-left: $navbar-divider-width solid $navbar-divider-color;
+      border-left: settings.$navbar-divider-width solid settings.$navbar-divider-color;
     }
   }
 
@@ -110,7 +113,7 @@
   // When collapsed, prevent the toggleable navbar contents from appearing in
   // the default flexbox row orienation. Requires the use of `flex-wrap: wrap`
   // on the `.navbar` parent.
-  @if $enable-navbar-collapse {
+  @if settings-options.$enable-navbar-collapse {
     .navbar-collapse {
       flex: 1 1 100%;
       // Align content vertically in all instances.  Use flexbox utils to override.
@@ -120,25 +123,25 @@
 
   // Navbar Toggle
   // Custom button for toggling the `.navbar-collapse`, powered by the collapse plugin.
-  @if $enable-navbar-toggle {
+  @if settings-options.$enable-navbar-toggle {
     .navbar-toggle {
-      padding: $navbar-toggle-padding-y $navbar-toggle-padding-x;
-      @include font-size($navbar-toggle-font-size);
+      padding: settings.$navbar-toggle-padding-y settings.$navbar-toggle-padding-x;
+      @include rfs.font-size(settings.$navbar-toggle-font-size);
       line-height: 1;
-      text-decoration: if($link-decoration == none, null, none);
+      text-decoration: if(settings.$link-decoration == none, null, none);
       background-color: transparent; // Remove default button style
-      border: $border-width solid transparent; // Remove default button style
-      @include border-radius($navbar-toggle-border-radius);
-      @include transition($navbar-toggle-transition);
+      border: settings.$border-width solid transparent; // Remove default button style
+      @include border.border-radius(settings.$navbar-toggle-border-radius);
+      @include transition.transition(settings.$navbar-toggle-transition);
 
       &:hover {
-        text-decoration: if($link-hover-decoration == underline, none, null);
+        text-decoration: if(settings.$link-hover-decoration == underline, none, null);
       }
 
       &:focus {
-        text-decoration: if($link-hover-decoration == underline, none, null);
+        text-decoration: if(settings.$link-hover-decoration == underline, none, null);
         outline: 0;
-        box-shadow: $navbar-toggle-focus-box-shadow;
+        box-shadow: settings.$navbar-toggle-focus-box-shadow;
       }
     }
   }
@@ -146,15 +149,15 @@
   // Generate series of `.navbar-expand-*` responsive classes for configuring
   // where your navbar collapses.
   .navbar-expand {
-    @each $bp in $navbar-expand-breakpoints {
-      $bprule: breakpoint-designator($bp);
-      $prev: breakpoint-prev($bp, $grid-breakpoints);
+    @each $bp in settings.$navbar-expand-breakpoints {
+      $bprule: breakpoints.breakpoint-designator($bp);
+      $prev: breakpoints.breakpoint-prev($bp, settings.$grid-breakpoints);
 
       &#{$bprule} {
         // Skip smallest breakpoint
-        @if breakpoint-min($bp, $grid-breakpoints) != null {
-          @include media-breakpoint-down($prev) {
-            @if $enable-navbar-nav and $enable-dropdown {
+        @if breakpoints.breakpoint-min($bp, settings.$grid-breakpoints) != null {
+          @include breakpoints.media-breakpoint-down($prev) {
+            @if settings-options.$enable-navbar-nav and settings-options.$enable-dropdown {
               .navbar-nav {
                 .dropdown-menu {
                   position: static;
@@ -163,52 +166,52 @@
               }
             }
 
-            @if $enable-navbar-divider {
+            @if settings-options.$enable-navbar-divider {
               .navbar-divider {
-                margin: $navbar-divider-margin-x 0;
-                border-top: $navbar-divider-width solid $navbar-divider-color;
+                margin: settings.$navbar-divider-margin-x 0;
+                border-top: settings.$navbar-divider-width solid settings.$navbar-divider-color;
                 border-left: 0;
               }
             }
           }
         }
 
-        @include media-breakpoint-up($bp) {
+        @include breakpoints.media-breakpoint-up($bp) {
           flex-wrap: nowrap;
           justify-content: flex-start;
 
-          @if $enable-navbar-nav {
+          @if settings-options.$enable-navbar-nav {
             .navbar-nav {
               flex-direction: row;
               align-items: center;
 
-              @if $enable-dropdown {
+              @if settings-options.$enable-dropdown {
                 .dropdown-menu {
                   position: absolute;
                 }
               }
 
               .nav-link {
-                padding-right: $navbar-item-padding-x;
-                padding-left: $navbar-item-padding-x;
+                padding-right: settings.$navbar-item-padding-x;
+                padding-left: settings.$navbar-item-padding-x;
               }
             }
           }
 
-          @if $enable-navbar-collapse {
+          @if settings-options.$enable-navbar-collapse {
             .navbar-collapse {
               display: flex !important;   // stylelint-disable-line declaration-no-important
               flex-basis: auto;
             }
           }
 
-          @if $enable-navbar-toggle {
+          @if settings-options.$enable-navbar-toggle {
             .navbar-toggle {
               display: none;
             }
           }
 
-          @if $enable-navbar-offcanvas and $enable-offcanvas {
+          @if settings-options.$enable-navbar-offcanvas and settings-options.$enable-offcanvas {
             .offcanvas {
               // stylelint-disable declaration-no-important
               position: static;
@@ -220,18 +223,18 @@
               background-color: transparent !important;
               border: 0 !important;
               transform: none !important;
-              @include box-shadow(none);
-              @include transition(none);
+              @include box-shadow.box-shadow(none);
+              @include transition.transition(none);
               // stylelint-enable declaration-no-important
             }
 
-            @if $enable-offcanvas-header {
+            @if settings-options.$enable-offcanvas-header {
               .offcanvas-header {
                 display: none;
               }
             }
 
-            @if $enable-offcanvas-body {
+            @if settings-options.$enable-offcanvas-body {
               .offcanvas-body {
                 display: flex;
                 flex-grow: 0;
@@ -247,142 +250,142 @@
 
   // Navbar Themes
   // Dark links against a light background
-  @if $enable-navbar-light {
+  @if settings-options.$enable-navbar-light {
     .navbar-light {
       .navbar-brand {
-        color: $navbar-light-brand-color;
+        color: settings.$navbar-light-brand-color;
 
         &:hover,
         &:focus {
-          color: $navbar-light-brand-hover-color;
+          color: settings.$navbar-light-brand-hover-color;
         }
       }
 
-      @if $enable-navbar-nav {
+      @if settings-options.$enable-navbar-nav {
         .navbar-nav {
           .nav-link {
-            color: $navbar-light-color;
+            color: settings.$navbar-light-color;
 
             &:hover,
             &:focus {
-              color: $navbar-light-hover-color;
+              color: settings.$navbar-light-hover-color;
             }
 
             &.disabled {
-              color: $navbar-light-disabled-color;
+              color: settings.$navbar-light-disabled-color;
               background-color: transparent;
               border-color: transparent;
             }
 
             &.open,
             &.active {
-              color: $navbar-light-active-color;
+              color: settings.$navbar-light-active-color;
             }
           }
         }
       }
 
-      @if $enable-navbar-toggle {
+      @if settings-options.$enable-navbar-toggle {
         .navbar-toggle {
-          color: $navbar-light-color;
-          border-color: $navbar-light-toggle-border;
+          color: settings.$navbar-light-color;
+          border-color: settings.$navbar-light-toggle-border;
 
           &:hover,
           &:focus {
-            color: $navbar-light-active-color;
+            color: settings.$navbar-light-active-color;
           }
         }
       }
 
-      @if $enable-navbar-text {
+      @if settings-options.$enable-navbar-text {
         .navbar-text {
-          color: $navbar-light-color;
+          color: settings.$navbar-light-color;
 
           a {
-            color: $navbar-light-hover-color;
+            color: settings.$navbar-light-hover-color;
 
             &:hover,
             &:focus {
-              color: $navbar-light-active-color;
+              color: settings.$navbar-light-active-color;
             }
           }
         }
       }
 
-      @if $enable-navbar-divider {
+      @if settings-options.$enable-navbar-divider {
         .navbar-divider {
-          border-color: $navbar-light-divider-color;
+          border-color: settings.$navbar-light-divider-color;
         }
       }
     }
   }
 
   // White links against a dark background
-  @if $enable-navbar-dark {
+  @if settings-options.$enable-navbar-dark {
     .navbar-dark {
       .navbar-brand {
-        color: $navbar-dark-brand-color;
+        color: settings.$navbar-dark-brand-color;
 
         &:hover,
         &:focus {
-          color: $navbar-dark-brand-hover-color;
+          color: settings.$navbar-dark-brand-hover-color;
         }
       }
 
-      @if $enable-navbar-nav {
+      @if settings-options.$enable-navbar-nav {
         .navbar-nav {
           .nav-link {
-            color: $navbar-dark-color;
+            color: settings.$navbar-dark-color;
 
             &:hover,
             &:focus {
-              color: $navbar-dark-hover-color;
+              color: settings.$navbar-dark-hover-color;
             }
 
             &.disabled {
-              color: $navbar-dark-disabled-color;
+              color: settings.$navbar-dark-disabled-color;
               background-color: transparent;
               border-color: transparent;
             }
 
             &.open,
             &.active {
-              color: $navbar-dark-active-color;
+              color: settings.$navbar-dark-active-color;
             }
           }
         }
       }
 
-      @if $enable-navbar-toggle {
+      @if settings-options.$enable-navbar-toggle {
         .navbar-toggle {
-          color: $navbar-dark-color;
-          border-color: $navbar-dark-toggle-border;
+          color: settings.$navbar-dark-color;
+          border-color: settings.$navbar-dark-toggle-border;
 
           &:hover,
           &:focus {
-            color: $navbar-dark-active-color;
+            color: settings.$navbar-dark-active-color;
           }
         }
       }
 
-      @if $enable-navbar-text {
+      @if settings-options.$enable-navbar-text {
         .navbar-text {
-          color: $navbar-dark-color;
+          color: settings.$navbar-dark-color;
 
           a {
-            color: $navbar-dark-hover-color;
+            color: settings.$navbar-dark-hover-color;
 
             &:hover,
             &:focus {
-              color: $navbar-dark-active-color;
+              color: settings.$navbar-dark-active-color;
             }
           }
         }
       }
 
-      @if $enable-navbar-divider {
+      @if settings-options.$enable-navbar-divider {
         .navbar-divider {
-          border-color: $navbar-dark-divider-color;
+          border-color: settings.$navbar-dark-divider-color;
         }
       }
     }
