--- a/scss/core/_root.scss
+++ b/scss/core/_root.scss
@@ -1,57 +1,57 @@
 @use "sass:meta";
-@use "../settings" as *;
-@use "../settings-options" as *;
-@use "../functions" as *;
-@use "../vendor/rfs" as *;
+@use "../settings";
+@use "../settings-options";
+@use "../functions/color-util";
+@use "../vendor/rfs";
 
 :root {
-  // @if $enable-root-colors {
+  // @if settings-options.$enable-root-colors {
   //   @each $color, $value in $root-colors {
-  //     color-#{$prefix}color}: #{$prefix}value};
+  //     color-#{settings.$prefix}color}: #{settings.$prefix}value};
   //   }
   // }
 
-  @each $bp, $value in $grid-breakpoints {
-    --#{$prefix}breakpoint-#{$bp}: #{$value};
+  @each $bp, $value in settings.$grid-breakpoints {
+    --#{settings.$prefix}breakpoint-#{$bp}: #{$value};
   }
 
   // Use `inspect` for lists so that quoted items keep the quotes.
   // See https://github.com/sass/sass/issues/2383#issuecomment-336349172
-  --#{$prefix}font-family-sans-serif: #{meta.inspect($font-family-sans-serif)};
-  --#{$prefix}font-family-serif: #{meta.inspect($font-family-serif)};
-  --#{$prefix}font-family-monospace: #{meta.inspect($font-family-monospace)};
+  --#{settings.$prefix}font-family-sans-serif: #{meta.inspect(settings.$font-family-sans-serif)};
+  --#{settings.$prefix}font-family-serif: #{meta.inspect(settings.$font-family-serif)};
+  --#{settings.$prefix}font-family-monospace: #{meta.inspect(settings.$font-family-monospace)};
 
   // Root and body
-  @if $font-size-root != null {
-    --#{$prefix}root-font-size: #{$font-size-root};
+  @if settings.$font-size-root != null {
+    --#{settings.$prefix}root-font-size: #{settings.$font-size-root};
   }
-  --#{$prefix}body-font-family: #{meta.inspect($font-family-base)};
-  @include rfs($font-size-base, --#{$prefix}body-font-size);
-  --#{$prefix}body-font-weight: #{$font-weight-base};
-  --#{$prefix}body-line-height: #{$line-height-base};
-  @if $body-text-align != null {
-    --#{$prefix}body-text-align: #{$body-text-align};
-  }
-
-  --#{$prefix}body-color: #{$body-color};
-  --#{$prefix}body-color-rgb: #{to-rgb($body-color)};
-  --#{$prefix}body-bg: #{$body-bg};
-  --#{$prefix}body-bg-rgb: #{to-rgb($body-bg)};
-
-  --#{$prefix}heading-color: #{$headings-color};
-
-  --#{$prefix}link-color: #{$link-color};
-  --#{$prefix}link-color-rgb: #{to-rgb($link-color)};
-  --#{$prefix}link-decoration: #{$link-decoration};
-  --#{$prefix}link-hover-color: #{$link-hover-color};
-  --#{$prefix}link-hover-color-rgb: #{to-rgb($link-hover-color)};
-
-  @if $link-hover-decoration != null {
-    --#{$prefix}link-hover-decoration: #{$link-hover-decoration};
+  --#{settings.$prefix}body-font-family: #{meta.inspect(settings.$font-family-base)};
+  @include rfs.rfs(settings.$font-size-base, --#{settings.$prefix}body-font-size);
+  --#{settings.$prefix}body-font-weight: #{settings.$font-weight-base};
+  --#{settings.$prefix}body-line-height: #{settings.$line-height-base};
+  @if settings.$body-text-align != null {
+    --#{settings.$prefix}body-text-align: #{settings.$body-text-align};
   }
 
-  --#{$prefix}code-color: #{$code-color};
-  --#{$prefix}code-bg: #{$code-bg};
-  --#{$prefix}highlight-color: #{$mark-color};
-  --#{$prefix}highlight-bg: #{$mark-bg};
+  --#{settings.$prefix}body-color: #{settings.$body-color};
+  --#{settings.$prefix}body-color-rgb: #{color-util.to-rgb(settings.$body-color)};
+  --#{settings.$prefix}body-bg: #{settings.$body-bg};
+  --#{settings.$prefix}body-bg-rgb: #{color-util.to-rgb(settings.$body-bg)};
+
+  --#{settings.$prefix}heading-color: #{settings.$headings-color};
+
+  --#{settings.$prefix}link-color: #{settings.$link-color};
+  --#{settings.$prefix}link-color-rgb: #{color-util.to-rgb(settings.$link-color)};
+  --#{settings.$prefix}link-decoration: #{settings.$link-decoration};
+  --#{settings.$prefix}link-hover-color: #{settings.$link-hover-color};
+  --#{settings.$prefix}link-hover-color-rgb: #{color-util.to-rgb(settings.$link-hover-color)};
+
+  @if settings.$link-hover-decoration != null {
+    --#{settings.$prefix}link-hover-decoration: #{settings.$link-hover-decoration};
+  }
+
+  --#{settings.$prefix}code-color: #{settings.$code-color};
+  --#{settings.$prefix}code-bg: #{settings.$code-bg};
+  --#{settings.$prefix}highlight-color: #{settings.$mark-color};
+  --#{settings.$prefix}highlight-bg: #{settings.$mark-bg};
 }
