--- a/scss/core/_typography.scss
+++ b/scss/core/_typography.scss
@@ -1,12 +1,12 @@
 @forward "reboot";
-@use "../settings" as *;
-@use "../settings-options" as *;
-@use "../mixins" as *;
-@use "../vendor/rfs" as *;
+@use "../settings";
+@use "../settings-options";
+@use "../mixins/lists";
+@use "../vendor/rfs";
 
-@if $enable-typography {
+@if settings-options.$enable-typography {
   // Headings
-  @if $enable-typography-headings {
+  @if settings-options.$enable-typography-headings {
     .h1 {
       @extend h1;
     }
@@ -33,60 +33,60 @@
   }
 
   // Lead in
-  @if $enable-typography-lead {
+  @if settings-options.$enable-typography-lead {
     .lead {
-      @include font-size($lead-font-size);
-      font-weight: $lead-font-weight;
-      line-height: $lead-line-height;
+      @include rfs.font-size(settings.$lead-font-size);
+      font-weight: settings.$lead-font-weight;
+      line-height: settings.$lead-line-height;
     }
   }
 
   // Emphasis
-  @if $enable-typography-small {
+  @if settings-options.$enable-typography-small {
     .small {
       @extend small;
     }
   }
 
-  @if $enable-typography-mark {
+  @if settings-options.$enable-typography-mark {
     .mark {
       @extend mark;
     }
   }
 
   // Lists
-  @if $enable-typography-list-unstyled {
+  @if settings-options.$enable-typography-list-unstyled {
     .list-unstyled {
-      @include list-unstyled();
+      @include lists.list-unstyled();
     }
   }
 
   //  Abbr extension
-  @if $enable-typography-initialism {
+  @if settings-options.$enable-typography-initialism {
     .initialism {
-      @include font-size($initialism-font-size);
+      @include rfs.font-size(settings.$initialism-font-size);
       text-transform: uppercase;
     }
   }
 
   // Blockquotes
-  @if $enable-typography-blockquote {
+  @if settings-options.$enable-typography-blockquote {
     .blockquote {
-      margin: $blockquote-margin;
-      @include font-size($blockquote-font-size);
-      color: $blockquote-color;
+      margin: settings.$blockquote-margin;
+      @include rfs.font-size(settings.$blockquote-font-size);
+      color: settings.$blockquote-color;
 
       > :last-child {
         margin-bottom: 0;
       }
     }
     .blockquote-footer {
-      margin: $blockquote-footer-margin;
-      @include font-size($blockquote-footer-font-size);
-      color: $blockquote-footer-color;
+      margin: settings.$blockquote-footer-margin;
+      @include rfs.font-size(settings.$blockquote-footer-font-size);
+      color: settings.$blockquote-footer-color;
 
       &::before {
-        content: $blockquote-footer-content;
+        content: settings.$blockquote-footer-content;
       }
     }
   }
